--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -9,9 +9,10 @@
     background: var(--color-bg-variant);
     border-radius: 0 0 2rem 2rem;
     border: 1px solid var(--color-primary);
-    height: fit-content;
+    max-height: 45em;
     transition: var(--transition);
-
+    overflow-y: scroll;
+position: relative;
 
 }
 
@@ -32,7 +33,8 @@
     padding: 2rem;
     border-radius: 0 0 2rem 2rem;
     box-shadow: 0 2rem 1rem rgba(0,0,0,0.1);
-
+position: sticky;
+top: 0;
 }
 
 
