--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -55,7 +55,7 @@ header{
 
 
 /*-------------------------------------ME IMAGE----------------------------------*/
-.me{
+/* .me{
 
     background: linear-gradient(var(--color-primary) , transparent);
     width: 22rem;
@@ -68,9 +68,18 @@ header{
     padding: 5rem 1.5rem 1.5rem 1.5rem;
 
 
+} */
+
+.me {
+    background: linear-gradient(var(--color-primary) 0% , transparent 110%);
+    width: 22rem;
+    height: 24rem;
+    position: absolute;
+    left: calc(50% - 11rem);
+    margin-top: 4rem;
+    border-radius: 2rem;
+    padding: 3em 1.5em;
 }
-
-
 
 
 /*---------------------SCROLL DOWN -------------------------*/
@@ -88,12 +97,12 @@ header{
 
 /*-----------------------------MEDIA QUERIES (MediumCES)--------------------------*/
 
-@media screen and (max-width:1024px){
+/* @media screen and (max-width:1024px){
     
     header{
         height: 68vh;
     }
-}
+} */
 
 
 /*-----------------------------MEDIA QUERIES (Medium DEVICES)--------------------------*/
